--- a/css/reset.css
+++ b/css/reset.css
@@ -46,17 +46,17 @@ ul {
 html {
     width: 100%;
     height: 100%;
-    /*font-size: 62.5%;*/
+    font-size: 62.5%;
     overflow-x: hidden;
 }
 
 body{
     width: 100%;
     height: 100%;
-    min-width: 1024px;
+    /*min-width: 1024px;*/
     min-height: 568px;
     font-size: 14px;
-    /*font-size: 1.4rem;*/
+    font-size: 1.4rem;
 }
 
 body,
