--- a/css/style.css
+++ b/css/style.css
@@ -10,7 +10,7 @@
 	flex-direction: column;
 }
 .main .wrapper{
-	/*flex: 1;*/
+	flex: 1;
 	width: 100%;
 	height: 100%;
 	display: flex;
@@ -28,14 +28,14 @@
 }
 .main .wrapper .content .title h2{
 	line-height: 1.2;
-	font-size: 60px;
+	font-size: 6rem;
 	color: #fff;
 	margin-top: 30px;
 	font-weight: 600;
 }
 .main .wrapper .content .title p{
 	line-height: 1.6;
-	font-size: 18px;
+	font-size: 1.8rem;
 	color: #fff;
 	margin-top: 24px;
 	font-weight: 300;
@@ -45,7 +45,7 @@
 	height: 38px;
 	line-height: 39px;
 	color: #fff;
-	font-size: 16px;
+	font-size: 1.6rem;
 	background-color: #e9191a;
 	border: none;
 	border-radius: 30px;
@@ -56,21 +56,20 @@
 .main .wrapper .content .dowload p{
 	line-height: 3;
 	color: #fff;
-	font-size: 12px;
-	letter-spacing: 1px;
+	font-size: 1.2rem;
 	font-weight: 300;
 }
 /*footer*/
 .main .footer{
-	height: 80px;
-	background-color: #111;
+	height: 70px;
+	background-color: #000;
 }
 .main .footer p{
-	height: 80px;
-	line-height: 25px;
+	height: 70px;
+	line-height: 20px;
 	padding-top: 15px;
 	color: #666;
-	font-size: 14px;
+	font-size: 1.4rem;
 }
 /*弹框*/
 .popupBox{
@@ -109,13 +108,13 @@
 }
 .popupBox .popup p{
 	line-height: 30px;
-	font-size: 22px;
+	font-size: 2rem;
 }
 .popupBox .popup button{
 	width: 220px;
 	height: 38px;
 	line-height: 39px;
-	font-size: 16px;
+	font-size: 1.6rem;
 	margin-top: 40px;
 	color: #fff;
 	background-color: #e9191a;
