--- a/css/media.css
+++ b/css/media.css
@@ -32,7 +32,6 @@
 		margin-top: -130px;
 	}
 }
-
 @media screen and (min-width: 320px) and (max-width: 375px){
     .main .wrapper .content .logo{
 		width: 60px!important;
@@ -90,6 +89,7 @@
 		height: 50px;
 		line-height: 1.2;
 		padding-top: 10px;
+		font-size: 1.2rem;
 	}
 	.popupBox .popup{
 		width: 380px;
@@ -122,6 +122,7 @@
 		height: 50px;
 		line-height: 1.2;
 		padding-top: 10px;
+		font-size: 1.2rem;
 	}
 }
 @media screen and (min-width: 769px) and (max-width: 1024px){
@@ -140,10 +141,13 @@
 		font-size: 16px;
 		margin-top: 6%;
 	}
-}
-/*@media screen and (min-width: 1025px) and (max-width: 1440px){
-    .main .wrapper .content .logo{
-		width: 70px!important;
-		height: 70px!important;
+	.main .footer{
+		height: 50px;
 	}
-}*/
+	.main .footer p{
+		height: 50px;
+		line-height: 1.2;
+		padding-top: 10px;
+		font-size: 1.2rem;
+	}
+}
