--- a/css/media.css
+++ b/css/media.css
@@ -1,152 +1,140 @@
 
 @media screen and (max-width: 319px){
-    .main .wrapper .content .logo{
-		width: 60px!important;
-		height: 60px!important;
+    .logo{
+		width: 60px;
+		height: 60px;
 	}
-	.main .wrapper .content .title h2{
+	.section1_title{
 		font-size: 2.4rem;
 		margin-top: 10%;
 	}
-	.main .wrapper .content .title p{
+	.section1_description{
 		font-size: 1.6rem;
-		margin-top: 20px;
+		margin-top: 2rem;
 	}
-	.main .wrapper .content .dowload button{
+	.section1_download button{
 		font-size: 1.6rem;
-		margin-top: 35%;
+		margin-top: 30%;
 	}
-	.main .footer{
+	.footer{
 		height: 40px;
 	}
-	.main .footer p{
-		height: 40px;
-		line-height: 1;
-		padding-top: 8px;
+	.footer p{
+		line-height: 15px;
+		padding-top: 5px;
 		font-size: 1.2rem;
 	}
-	.popupBox .popup{
-		width: 310px;
-		height: 260px;
-		margin-left: -155px;
-		margin-top: -130px;
+	.popup{
+		width: 300px;
+		margin-left: -150px;
 	}
 }
 @media screen and (min-width: 320px) and (max-width: 375px){
-    .main .wrapper .content .logo{
-		width: 60px!important;
-		height: 60px!important;
+    .logo{
+		width: 60px;
+		height: 60px;
 	}
-	.main .wrapper .content .title h2{
+	.section1_title{
 		font-size: 2.4rem;
 		margin-top: 10%;
 	}
-	.main .wrapper .content .title p{
+	.section1_description{
 		font-size: 1.6rem;
-		margin-top: 20px;
+		margin-top: 2rem;
 	}
-	.main .wrapper .content .dowload button{
+	.section1_download button{
 		font-size: 1.6rem;
-		margin-top: 40%;
+		margin-top: 45%;
 	}
-	.main .footer{
+	.footer{
 		height: 40px;
 	}
-	.main .footer p{
-		height: 40px;
-		line-height: 1;
-		padding-top: 8px;
+	.footer p{
+		line-height: 15px;
+		padding-top: 5px;
 		font-size: 1.2rem;
 	}
-	.popupBox .popup{
+	.popup{
 		width: 310px;
-		height: 260px;
 		margin-left: -155px;
-		margin-top: -130px;
 	}
 }
 @media screen and (min-width: 376px) and (max-width: 425px){
-    .main .wrapper .content .logo{
-		width: 70px!important;
-		height: 70px!important;
+    .logo{
+		width: 70px;
+		height: 70px;
 	}
-	.main .wrapper .content .title h2{
+	.section1_title{
 		font-size: 2.8rem;
 		margin-top: 10%;
 	}
-	.main .wrapper .content .title p{
+	.section1_description{
 		font-size: 2rem;
-		margin-top: 20px;
+		margin-top: 2rem;
 	}
-	.main .wrapper .content .dowload button{
+	.section1_download button{
 		font-size: 1.8rem;
-		margin-top: 45%;
+		margin-top: 42%;
 	}
-	.main .footer{
+	.footer{
 		height: 50px;
 	}
-	.main .footer p{
-		height: 50px;
-		line-height: 1.2;
+	.footer p{
+		line-height: 15px;
 		padding-top: 10px;
 		font-size: 1.2rem;
 	}
-	.popupBox .popup{
-		width: 380px;
-		height: 260px;
-		margin-left: -190px;
-		margin-top: -130px;
+	.popup{
+		width: 340px;
+		margin-left: -170px;
 	}
 }
 @media screen and (min-width: 426px) and (max-width: 768px){
-    .main .wrapper .content .logo{
-		width: 70px!important;
-		height: 70px!important;
+    .logo{
+		width: 70px;
+		height: 70px;
 	}
-	.main .wrapper .content .title h2{
-		font-size: 2.8rem;
+	.section1_title{
+		font-size: 4rem;
 		margin-top: 10%;
 	}
-	.main .wrapper .content .title p{
+	.section1_description{
 		font-size: 2rem;
-		margin-top: 20px;
+		margin-top: 2rem;
 	}
-	.main .wrapper .content .dowload button{
+	.section1_download button{
 		font-size: 1.8rem;
-		margin-top: 45%;
+		margin-top: 35%;
 	}
-	.main .footer{
+	.footer{
 		height: 50px;
 	}
-	.main .footer p{
-		height: 50px;
-		line-height: 1.2;
+	.footer p{
+		line-height: 15px;
 		padding-top: 10px;
 		font-size: 1.2rem;
 	}
 }
 @media screen and (min-width: 769px) and (max-width: 1024px){
-    .main .wrapper .content .logo{
-		width: 80px!important;
-		height: 80px!important;
+    .logo{
+		width: 80px;
+		height: 80px;
 	}
-	.main .wrapper .content .title h2{
-		font-size: 48px;
+	.section1_title{
+		font-size: 4.8rem;
 	}
-	.main .wrapper .content .title p{
-		/*font-size: 18px;*/
-		margin-top: 20px;
+	.section1_description{
+		margin-top: 2rem;
 	}
-	.main .wrapper .content .dowload button{
-		font-size: 16px;
+	.section1_download button{
+		font-size: 1.6rem;
 		margin-top: 6%;
 	}
-	.main .footer{
+	.footer{
 		height: 50px;
 	}
-	.main .footer p{
-		height: 50px;
-		line-height: 1.2;
+	.footer p{
+		line-height: 15px;
 		padding-top: 10px;
 		font-size: 1.2rem;
 	}
