--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,5 @@
 .main{
 	width: 100%;
-	height: 100%;
 	overflow-x: hidden;
 	overflow-y: auto;
 }
@@ -8,6 +7,7 @@
 	position: relative;
 	width: 100%;
 	height: 100%;
+	min-height: 568px;
 }
 .section1{
 	background-image: url(../img/bg.png);
