--- a/css/style.css
+++ b/css/style.css
@@ -158,6 +158,25 @@
 .opacity_0{
 	opacity: 0;
 }
+/*文字位置*/
+.anchor2{margin-left: 15%;padding-top: 10rem;}
+.anchor3{margin-left: 15%;}
+.anchor5{margin-left: 40%;padding-top: 18rem;}
+.anchor6{margin-left: 40%;}
+
+.anchor1{background-image: url(../img/bg1.png);
+    background-position: 50% 50%;
+    background-repeat: no-repeat;
+    width: 100%;
+    height: 100%;
+    overflow: hidden;}
+.anchor4{background: url(../img/bg2.png);
+    background-position: 50% 50%;
+    background-repeat: no-repeat;
+    width: 100%;
+    height: 100%;
+    overflow: hidden;}
+
 /*footer*/
 .footer{
 	width: 100%;
