--- a/css/style.css
+++ b/css/style.css
@@ -149,7 +149,8 @@
 	min-height: 510px;
 }
 .section4_title{
-	line-height: 510px;
+	line-height: 1.2;
+	padding-top: 215px;
 	color: #fff;
 	font-size: 6rem;
 	font-weight: 600;
@@ -159,24 +160,34 @@
 	opacity: 0;
 }
 /*文字位置*/
-.anchor2{margin-left: 15%;padding-top: 10rem;}
-.anchor3{margin-left: 15%;}
-.anchor5{margin-left: 40%;padding-top: 18rem;}
-.anchor6{margin-left: 40%;}
-
-.anchor1{background-image: url(../img/bg1.png);
-    background-position: 50% 50%;
+.anchor2{
+	margin-left: 15%;
+	padding-top: 10rem;
+}
+.anchor3{
+	margin-left: 15%;
+}
+.anchor5{
+	margin-left: 40%;
+	padding-top: 15rem;
+}
+.anchor6{
+	margin-left: 40%;
+}
+.anchor1{
+	background-image: url(../img/bg1.png);
+    background-position: 50% 75%;
+    background-size: cover;
     background-repeat: no-repeat;
-    width: 100%;
-    height: 100%;
-    overflow: hidden;}
-.anchor4{background: url(../img/bg2.png);
-    background-position: 50% 50%;
+    overflow: hidden;
+}
+.anchor4{
+	background: url(../img/bg2.png);
+    background-position: 50% 80%;
+    background-size: cover;
     background-repeat: no-repeat;
-    width: 100%;
-    height: 100%;
-    overflow: hidden;}
-
+    overflow: hidden;
+}
 /*footer*/
 .footer{
 	width: 100%;
