--- a/css/style.css
+++ b/css/style.css
@@ -21,6 +21,7 @@
 	right: 0;
 	top: 50%;
 	text-align: center;
+	margin-top: -300px!important;
 }
 .logo{
 	display: block;
@@ -30,7 +31,7 @@
 }
 .section1_title{
 	line-height: 1.2;
-	font-size: 6rem;
+	font-size: 5.4rem;
 	color: #fff;
 	margin-top: 3rem;
 	font-weight: 600;
@@ -39,7 +40,7 @@
 	line-height: 1.6;
 	margin-top: 2.4rem;
 	color: #fff;
-	font-size: 1.8rem;
+	font-size: 1.4rem;
 	font-weight: 300;
 }
 .section1_download button{
@@ -47,13 +48,13 @@
 	height: 38px;
 	line-height: 39px;
 	color: #fff;
-	font-size: 1.6rem;
+	font-size: 1.4rem;
 	background-color: #e9191a;
 	border: none;
 	border-radius: 19px;
 	outline: none;
 	font-weight: 300;
-	margin-top: 7%;
+	margin-top: 10%;
 }
 .section1_download p{
 	line-height: 3;
@@ -114,7 +115,7 @@
 }
 .section2_title{
 	line-height: 1.2;
-	font-size: 6rem;
+	font-size: 5.4rem;
 	color: #111;
 	padding: 3rem 3rem 0;
 	font-weight: 600;
@@ -124,7 +125,7 @@
 	margin-top: 2.4rem;
 	padding: 0 3rem;
 	color: #111;
-	font-size: 1.8rem;
+	font-size: 1.4rem;
 }
 .section2_img{
 	position: absolute;
@@ -145,14 +146,14 @@
 	
 }
 .section4{
-	height: 510px;
-	min-height: 510px;
+	height: 92%;
+	min-height: 92%;
 }
 .section4_title{
 	line-height: 1.2;
-	padding-top: 215px;
+	padding-top: 20%;
 	color: #fff;
-	font-size: 6rem;
+	font-size: 5.4rem;
 	font-weight: 600;
 	text-align: center;
 }
@@ -162,17 +163,19 @@
 /*文字位置*/
 .anchor2{
 	margin-left: 15%;
-	padding-top: 10rem;
+	padding-top: 8%;
 }
 .anchor3{
 	margin-left: 15%;
+	width:700px;
 }
 .anchor5{
 	margin-left: 40%;
-	padding-top: 15rem;
+	padding-top: 8%;
 }
 .anchor6{
 	margin-left: 40%;
+	width: 700px;
 }
 .anchor1{
 	background-image: url(../img/bg1.png);
@@ -191,13 +194,14 @@
 /*footer*/
 .footer{
 	width: 100%;
-	height: 70px;
+	height: 8%;
+	min-height: 70px;
 	background-color: #000;
 }
 .footer p{
 	height: 100%;
 	line-height: 20px;
-	padding-top: 15px;
+	padding-top: 20px;
 	color: #999;
 	font-size: 1.4rem;
 }
