--- a/css/style.css
+++ b/css/style.css
@@ -21,7 +21,7 @@
 	right: 0;
 	top: 50%;
 	text-align: center;
-	margin-top: -300px!important;
+	/*margin-top: -300px!important;*/
 }
 .logo{
 	display: block;
@@ -40,7 +40,7 @@
 	line-height: 1.6;
 	margin-top: 2.4rem;
 	color: #fff;
-	font-size: 1.6rem;
+	font-size: 1.8rem;
 	font-weight: 300;
 }
 .section1_download button{
@@ -48,7 +48,7 @@
 	height: 38px;
 	line-height: 39px;
 	color: #fff;
-	font-size: 1.6rem;
+	font-size: 1.8rem;
 	background-color: #e9191a;
 	border: none;
 	border-radius: 19px;
@@ -118,14 +118,14 @@
 	font-size: 5.4rem;
 	color: #111;
 	padding: 3rem 3rem 0;
-	font-weight: 600;
+	font-weight: 800;
 }
 .section2_description{
 	line-height: 1.6;
 	margin-top: 2.4rem;
 	padding: 0 3rem;
 	color: #111;
-	font-size: 1.6rem;
+	font-size: 1.8rem;
 }
 .section2_img{
 	position: absolute;
@@ -154,23 +154,24 @@
 	padding-top: 20%;
 	color: #fff;
 	font-size: 5.4rem;
-	font-weight: 600;
+	font-weight: 800;
 	text-align: center;
 }
 .opacity_0{
 	opacity: 0;
+	
 }
 /*文字位置*/
 .anchor2{
 	margin-left: 15%;
-	padding-top: 8%;
+	padding-top: 6%;
 }
 .anchor3{
 	margin-left: 15%;
 }
 .anchor5{
 	margin-left: 40%;
-	padding-top: 8%;
+	padding-top: 6%;
 }
 .anchor6{
 	margin-left: 40%;
@@ -178,7 +179,7 @@
 }
 .anchor1{
 	background-image: url(../img/bg4.png);
-    background-position: 50% 75%;
+    background-position: 80% 100%;
     background-size: cover;
     background-repeat: no-repeat;
     overflow: hidden;
