--- a/css/style.css
+++ b/css/style.css
@@ -11,7 +11,7 @@
 	min-height: 568px;
 }
 .section1{
-	background-image: url(../img/bg.png);
+	background-image: url(../img/bg.jpg);
 	background-repeat: no-repeat;
 	background-size: 100% 100%;
 }
@@ -118,7 +118,7 @@
 	font-size: 5.4rem;
 	color: #111;
 	padding: 3rem 3rem 0;
-	font-weight: 800;
+	font-weight: bold;
 }
 .section2_description{
 	line-height: 1.6;
@@ -150,8 +150,11 @@
 	min-height: 92%;
 }
 .section4_title{
-	line-height: 1.2;
-	padding-top: 20%;
+	position: absolute;
+	left: 0;
+	right: 0;
+	top: 50%;
+	margin-top: -37px;
 	color: #fff;
 	font-size: 5.4rem;
 	font-weight: 800;
@@ -175,25 +178,23 @@
 }
 .anchor6{
 	margin-left: 40%;
-	
 }
 .anchor1{
-	background-image: url(../img/bg4.png);
+	background-image: url(../img/bg4.jpg);
     background-position: 80% 100%;
     background-size: cover;
     background-repeat: no-repeat;
     overflow: hidden;
 }
 .anchor4{
-	background: url(../img/bg2.png);
-    background-position: 50% 80%;
+	background: url(../img/bg2.jpg);
+    background-position:80% 100%;
     background-size: cover;
     background-repeat: no-repeat;
     overflow: hidden;
 }
-
-.anchor8 {
-    background: url(../img/bg3.png);
+.anchor8{
+    background: url(../img/bg3.jpg);
     background-position: 50% 80%;
     background-size: cover;
     background-repeat: no-repeat;
