--- a/css/style.css
+++ b/css/style.css
@@ -11,7 +11,7 @@
 	min-height: 568px;
 }
 .section1{
-	background-image: url(../img/bg.jpg);
+	/*background-image: url(../img/bg.jpg);*/
 	background-repeat: no-repeat;
 	background-size: 100% 100%;
 }
