--- a/css/style.css
+++ b/css/style.css
@@ -3,7 +3,7 @@
 	height: 100%;
 	overflow-x: hidden;
 	overflow-y: auto;
-	-webkit-overflow-scrolling: touch;
+	/*-webkit-overflow-scrolling: touch;*/
 }
 .section{
 	position: relative;
@@ -12,7 +12,6 @@
 	min-height: 568px;
 }
 .section1{
-	/*background-image: url(../img/bg.jpg);*/
 	background-repeat: no-repeat;
 	background-size: 100% 100%;
 }
