--- a/css/reset.css
+++ b/css/reset.css
@@ -3,7 +3,8 @@
     box-sizing: border-box;
     -webkit-box-sizing: border-box;
     -moz-box-sizing: border-box;
-    font-family:"SF Pro SC","SF Pro Display","SF Pro Icons","PingFang SC","Microsoft YaHei","Helvetica Neue","Helvetica","Arial",sans-serif;
+    /*font-family:"SF Pro SC","SF Pro Display","SF Pro Icons","PingFang SC","Microsoft YaHei","Helvetica Neue","Helvetica","Arial",sans-serif;*/
+    font-family:"SF Pro SC","Microsoft YaHei","Helvetica Neue","Helvetica","Arial",sans-serif;
     user-select: none;
 }
 
