--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,10 @@
+@font-face {
+	font-family:'SF Pro SC';
+	font-style:normal;
+	font-weight:400;
+	src:url("/font/SF-Pro-SC/PingFangSC-Regular.eot");
+	src:url("/font/SF-Pro-SC/PingFangSC-Regular.woff2") format("woff2"), url("/font/SF-Pro-SC/PingFangSC-Regular.woff") format("woff"), url("/font/SF-Pro-SC/PingFangSC-Regular.ttf") format("truetype");
+}
 .main{
 	width: 100%;
 	height: 100%;
